fixed column alignment in past work section

--- a/assets/stylesheets/landing.css
+++ b/assets/stylesheets/landing.css
@@ -260,11 +260,18 @@ header {
   text-align: left;
 }
 
+.work-teaser {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
 .col-1-3 {
   background-color: #eddbcd;
-  width: 33%;
-  display: inline-block;
-  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 30%;
   padding: 5% 0;
 }
 
@@ -279,10 +286,10 @@ header {
 }
 
 .work-description {
-  max-width: 40%;
+  flex-basis: 70%;
   display: inline-block;
-  vertical-align: middle;
-  margin: 0 5%;
+  margin: auto 5%;
+  /* padding: 5% 0; */
 }
 
 .work-description h3,
